--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                 <h2 class="titulo letter">Nuestra Mision</h2>
                     <div class="contenedor-sobre-nuestra-mision">
                         <p>Aquellos animales que por diversas razones no han sido domesticados por el hombre son conocidos como "salvajes". En este espacio similar a una enciclopedia hallarás información sobre las diferentes especies: anfibios, aves, invertebrados, mamíferos, peces, reptiles y más, que nos llaman nuestra atención por sus hábitos, sus costumbres y sus reacciones ante los humanos.</p>
-                        <img src="./assets/tigre.jpg" alt="" class="abrazo-tigre">
+                        <img src="./assets/tigre.jpg" alt="Tigre abraza a una persona" class="abrazo-tigre">
                     </div>
             </section>
             <!-- segunda parte del main-->
             <section>
                 <article class="lion">
                     <h3>Leon salva a su amigo de ser deborado por 20 hienas</h3>
-                    <img src="./assets/leones.png" alt="">
+                    <img src="./assets/leones.png" alt="2 Leones que se cuidan">
                     <p>En una de las llanuras de África, un león se encontraba explorando todo el entorno. Sin embargo, de un momento a otro, su tranquilidad se vio amenazada.</p>
                     <p>Pues, se encontró en el camino a un grupo de hienas que desde el primer momento tuvieron la intención de hacerle daño. A causa de ello, procedieron a rodearlo para tratar de dejarlo sin posibilidad de escape.</p>
                     <p>Además, posterior a esto, se le fueron abalanzando al tiempo con el objetivo de causarle heridas de gravedad. No obstante, el león jamás estuvo dispuesto a dejarse vencer tan fácil y, por ende, utilizó su fuerza y sus poderosos dientes para defenderse a toda costa.</p>
@@ -85,15 +85,15 @@
                 <ul>
                     <li>Telefono: xxxxxxxxx</li>
                     <li>Direccion: xxxxxxxx</li>
-                    <li> <a href="">Escribinos <img src="./assets/ic-wsp.jpg" alt=""></a></li>
+                    <li> <a href="">Escribinos <img src="./assets/ic-wsp.jpg" alt="logo whatsapp"></a></li>
                 </ul>
             </section>
             <section>
                 <h2>Redes sociales</h2>
                 <ul>
-                <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="./assets/twitter.png" alt=""></a></li>
-                <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="./assets/facebook.png" alt=""></a></li>
-                <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="./assets/instagram.png" alt=""></a></li>
+                <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="./assets/twitter.png" alt="logo twitter"></a></li>
+                <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="./assets/facebook.png" alt="logo facebook"></a></li>
+                <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="./assets/instagram.png" alt="logo instagram"></a></li>
                 </ul>
             </section>
         </footer>
