--- a/pages/alimentacion.html
+++ b/pages/alimentacion.html
@@ -80,15 +80,15 @@
           <ul>
               <li>Telefono: xxxxxxxxx</li>
               <li>Direccion: xxxxxxxx</li>
-              <li> <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt=""></a></li>
+              <li> <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt="logo whatsapp"></a></li>
           </ul>
       </section>
       <section class="col-sm-12 col-md-12 col-xl-12">
         <h2>Redes sociales</h2>
         <ul class="col-sm-12 col-md-12 col-xl-12">
-          <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="../assets/twitter.png" alt=""></a></li>
-          <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="../assets/facebook.png" alt=""></a></li>
-          <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="../assets/instagram.png" alt=""></a></li>
+          <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="../assets/twitter.png" alt="logo twitter"></a></li>
+          <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="../assets/facebook.png" alt="logo facebook"></a></li>
+          <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="../assets/instagram.png" alt="logo instagram"></a></li>
         </ul>
     </section>
   </footer>
