--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,7 +57,7 @@
             Sé parte de nuestro equipo
             Registrate para recibir información sobre nuestras campañas, oportunidades para participar y más.
           </p>
-          <img src="../assets/camaleon.jpg" alt="">
+          <img src="../assets/camaleon.jpg" alt="camaleon">
         </div>
       </section>
       <section class="formu">
@@ -86,15 +86,15 @@
         <ul>
             <li>Telefono: xxxxxxxxx</li>
             <li>Direccion: xxxxxxxx</li>
-            <li> <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt=""></a></li>
+            <li> <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt="logo whatsapp"></a></li>
         </ul>
     </section>
     <section>
       <h2>Redes sociales</h2>
       <ul>
-        <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="../assets/twitter.png" alt=""></a></li>
-        <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="../assets/facebook.png" alt=""></a></li>
-        <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="../assets/instagram.png" alt=""></a></li>
+        <li><a class="redesSociales" href="https://twitter.com/?lang=es">Twitter <img src="../assets/twitter.png" alt="logo twitter"></a></li>
+        <li><a class="redesSociales" href="https://www.facebook.com/">Facebook <img src="../assets/facebook.png" alt="logo facebook"></a></li>
+        <li><a class="redesSociales" href="https://www.instagram.com/">Instagram <img src="../assets/instagram.png" alt="logo instagram"></a></li>
       </ul>
   </section>
     </footer>
