--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -60,7 +60,7 @@
               Hombre sin hogar y perrito se aferran abrazados tratando de
               sobrevivir en el frío
             </h3>
-            <img src="../assets/fidelidad.png" alt="" />
+            <img src="../assets/fidelidad.png" alt="perro y humano" />
             <p>
               Lulo fue un hombre brasilero que a lo largo de su vida enfrentó
               diferentes problemas. Por lo tanto, se quedó sin un hogar y tuvo
@@ -74,7 +74,7 @@
           </div>
           <div class="cardN container-fluid col-sm-12 col-md-12 col-xl-12">
             <h3>La senda del tigre, el documental sobre el tigre siberiano</h3>
-            <img src="../assets/doctigre.jpg" alt="" />
+            <img src="../assets/doctigre.jpg" alt="tigre" />
             <p>
               El documental ofrecido por RT documentales (disponible en
               YouTube), aborda la posición del gobierno Chino respecto a la
@@ -96,7 +96,7 @@
           </div>
           <div class="cardN container-fluid col-sm-12 col-md-12 col-xl-12">
             <h3>Características y hábitat de la ballena gris</h3>
-            <img src="../assets/ballenagris.jpg" alt="" />
+            <img src="../assets/ballenagris.jpg" alt="ballena gris" />
             <p>
               La especie Eschrichtius robustus, conocida como ballena gris, es
               la única integrante actual de la familia Eschrichtiidae. Su rasgo
@@ -112,7 +112,6 @@
               Por ello, aunque se denomine ballena gris, cuanto mayor es el
               ejemplar, más difícil es visualizar esta tonalidad.
             </p>
-            <a href=""></a>
           </div>
         </div>
       </section>
@@ -121,7 +120,7 @@
       <article>
         <h3>7 destinos para ver animales salvajes en libertad</h3>
         <div>
-          <img src="../assets/animalLib.jpg" alt="">
+          <img src="../assets/animalLib.jpg" alt="Tortuga marina">
           <p>No hay nada mejor para aprender de la naturaleza que ver animales salvajes en libertad. O lo que es lo mismo, verlos en su hábitat natural y donde las personas son simples espectadores.</p>
           <p>Deja de lado los zoológicos, que sólo sirven para encerrar animales, y decídete a viajar a sitios en los que residen en plena naturaleza. En este artículo te revelamos dónde puedes ir para disfrutar de una experiencia única.</p>
         </div>
@@ -134,7 +133,7 @@
           <li>Telefono: xxxxxxxxx</li>
           <li>Direccion: xxxxxxxx</li>
           <li>
-            <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt="" /></a>
+            <a href="">Escribinos <img src="../assets/ic-wsp.jpg" alt="logo whatsapp" /></a>
           </li>
         </ul>
       </section>
@@ -143,17 +142,17 @@
         <ul>
           <li>
             <a class="redesSociales" href="https://twitter.com/?lang=es"
-              >Twitter <img src="../assets/twitter.png" alt=""
+              >Twitter <img src="../assets/twitter.png" alt="logo twitter"
             /></a>
           </li>
           <li>
             <a class="redesSociales" href="https://www.facebook.com/"
-              >Facebook <img src="../assets/facebook.png" alt=""
+              >Facebook <img src="../assets/facebook.png" alt="logo facebook"
             /></a>
           </li>
           <li>
             <a class="redesSociales" href="https://www.instagram.com/"
-              >Instagram <img src="../assets/instagram.png" alt=""
+              >Instagram <img src="../assets/instagram.png" alt="logo instagram"
             /></a>
           </li>
         </ul>
